2008-04-29  Martin Baulig  <martin@ximian.com>
	**** Kahalo changes start here ****


svn path=/branches/martin/debugger-kahalo/; revision=102136

--- a/mcs/ChangeLog
+++ b/mcs/ChangeLog
@@ -1,5 +1,9 @@
 2008-04-29  Martin Baulig  <martin@ximian.com>
 
+	**** Kahalo changes start here ****
+
+2008-04-29  Martin Baulig  <martin@ximian.com>
+
 	* cs-tokenizer.cs (Tokenizer.Position): Added `line'.
 	(Tokenizer.PopPosition): Also restore the `line'.
 
