--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-05  Martin Baulig  <martin@ximian.com>
+
+	* backend/arch/Architecture_X86_64.cs
+	(Architecture_X86_64.unwind_method): Use `memory.ReadLongInteger()'
+	to read the registers from the stack.
+
 2008-04-29  Martin Baulig  <martin@ximian.com>
 
 	* classes/Method.cs
