--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-06  Martin Baulig  <martin@ximian.com>
+
+	* frontend/Command.cs
+	(ShowCommand.ShowParametersCommand): Don't crash if the current
+	method doesn't have any parameters.
+	(ShowCommand.ShowLocalsCommand): Likewise.
+
 2008-05-05  Martin Baulig  <martin@ximian.com>
 
 	* backend/arch/Architecture_X86_64.cs
