--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-07  Martin Baulig  <martin@ximian.com>
+
+	* backend/ProcessServant.cs
+	(ProcessServant.ChildForked): Unset `MONO_INSIDE_MDB' if we're not
+	following forks.
+
 2008-05-06  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Expression.cs
