--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-05-07  Martin Baulig  <martin@ximian.com>
 
+	* classes/DebuggerOptions.cs: Add new `-xsp' option to start xsp
+	inside the debugger.
+
+	* configure.in: Conditionally depend on XSP when using the
+	development branch.
+
+2008-05-07  Martin Baulig  <martin@ximian.com>
+
 	* classes/Debugger.cs
 	(Debugger.ProcessReachedMainEvent): New public event.
 
