--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-26  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoSymbolFile.cs
+	(MonoMethodLineNumberTable): Compute start and end row here.
+
+2008-05-26  Martin Baulig  <martin@ximian.com>
+
 	* languages/TargetFunctionType.cs
 	(TargetFunctionType.GetSourceCode): New public method.
 	(TargetFunctionType): Removed `HasSourceCode', `SourceFile',
