2008-05-28  Martin Baulig  <martin@ximian.com>
	* MonoSymbolTable.cs
	(MethodSourceEntry): Removed.
	(SourceFileEntry.Methods): Removed.


svn path=/branches/martin/debugger-kahalo/; revision=104247

--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-28  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
+	(MethodSourceEntry): Removed.
+	(SourceFileEntry.Methods): Removed.
+
 2008-05-26  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolWriter.cs
