--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,6 +1,21 @@
 2008-05-28  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
+	(MethodEntry.LocalTypeIndices): Removed.
+	(MethodEntry.GetLineNumberTable): New public method; replaces the
+	`LineNumbers' and `NumLineNumbers' fields.
+	(MethodEntry.GetLocals): New public method; replaces the `Locals'
+	and `NumLocals' fields.
+	(MethodEntry.GetCodeBlocks): New public method; replaces the
+	`CodeBlocks' and `NumCodeBlocks' fields.
+	(MethodEntry.GetScopeVariables): New public method; replaces the
+	`ScopeVariables' and `NumScopeVariables' fields.
+	(MethodEntry.GetRealName): New public method; replaces `RealName'.
+	(MethodEntry): Removed the old fields.
+
+2008-05-28  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
 	(MethodSourceEntry): Removed.
 	(SourceFileEntry.Methods): Removed.
 
