--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-02  Martin Baulig  <martin@ximian.com>
+
+	* SymbolWriterImpl.cs: Removed.
+
 2008-05-28  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
