--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,14 @@
+2008-06-05  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
+	(MethodEntry.Flags): New public enum.
+	(MethodEntry.MethodFlags): New public fields.
+	(MethodEntry.LocalNamesAmbiguous): Removed; this is now part of
+	the `MethodFlags'.
+
+	* MonoSymbolWriter.cs
+	(MonoSymbolWriter.SetCompilerGenerated): New public method.
+
 2008-06-02  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolWriter.cs
