--- a/mcs/ChangeLog
+++ b/mcs/ChangeLog
@@ -1,3 +1,12 @@
+2008-06-05  Martin Baulig  <martin@ximian.com>
+
+	* class.cs
+	(MethodData.Emit): Call SymbolWriter.SetCompilerGenerated() if
+	we're an iterator method.
+
+	* iterator.cs: Call SymbolWriter.SetCompilerGenerated() on all the
+	generated methods.
+
 2008-06-02  Martin Baulig  <martin@ximian.com>
 
 	* location.cs
