**** Merged from HEAD ****
svn path=/branches/martin/debugger-kahalo/; revision=105181

--- a/mcs/ChangeLog
+++ b/mcs/ChangeLog
@@ -73,6 +73,267 @@
 	* cs-tokenizer.cs (Tokenizer.Position): Added `line'.
 	(Tokenizer.PopPosition): Also restore the `line'.
 
+2008-06-05  Marek Safar  <marek.safar@gmail.com>
+
+	* statement.cs: Emit catch variable assignment using variable expression.
+	
+2008-06-05  Marek Safar  <marek.safar@gmail.com>
+
+	* ecore.cs, expression.cs, statement.cs: Make TemporaryVariable compatible
+	with other variable types.
+
+2008-06-04  Marek Safar  <marek.safar@gmail.com>
+
+	* ecore.cs, expression.cs, statement.cs, typemanager.cs: Removed custom
+	GetLength method emit, it breaks resolve rules.
+	
+2008-06-02  Atsushi Enomoto  <atsushi@ximian.com>
+            Marek Safar  <marek.safar@gmail.com>
+			
+	A fix for bug #395542
+	* cs-parser.jay: The trailing comma is allowed in anonymous type member
+	declaration.
+	
+2008-06-02  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #395287
+	* class.cs, modifiers.cs: Automatic properties method base modifiers checks.
+
+2008-05-31  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #395845
+	* class.cs, nullable.cs: User unary operator is allowed to have nullable and
+	non-nullable parameter type.
+	
+2008-05-31  Marek Safar  <marek.safar@gmail.com>
+
+	* class.cs: Handle contructor initializer as a statement in top-level block.
+
+2008-05-30  Marek Safar  <marek.safar@gmail.com>
+
+	* attribute.cs: Don't mix old and new corlib types when emitting corlib
+	security attributes.
+
+2008-05-24  Marek Safar  <marek.safar@gmail.com>
+
+	* ecore.cs, expression.cs: Small IVariable refactoring.
+
+2008-05-22  Marek Safar  <marek.safar@gmail.com>
+
+	* assign.cs (LocalTemporary): Implemented CreateExpressionTree.
+
+2008-05-21  Marek Safar  <marek.safar@gmail.com>
+
+	* cs-parser.jay: Removed redundant catch type check.
+
+2008-05-21  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #390372
+	* nullable.cs: Set correct return type.
+
+2008-05-21  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #391062
+	* typemanager.cs: Fixed crash when comparing null types.
+
+2008-05-21  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #391871
+	* cs-parser.jay: Better error handling for invalid catch type.
+
+2008-05-20  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #392155
+	* cs-tokenizer.cs: Fixed casting of byte and decimal expression.
+
+2008-05-15  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #390666
+	* ecore.cs (BetterExpressionConversion): Unwrap each Expression<T>
+	expressions.
+
+2008-05-15  Marek Safar  <marek.safar@gmail.com>
+
+	* class.cs, expression.cs, statement.cs: Removed a hack, setting block flag
+	in getter.
+
+2008-05-13  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #389625
+	* delegate.cs, generic.cs: Some progress on method group return type
+	inference.
+
+2008-05-13  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #378419
+	* namespace.cs: Inspect also parent namespaces not only namespace entries.
+
+2008-05-12  Marek Safar  <marek.safar@gmail.com>
+
+	* class.cs (Constructor): Added IsCompilerGenerated.
+
+2008-05-12  Marek Safar  <marek.safar@gmail.com>
+
+	* expression.cs: Enum binary operators can accept non-enum operand only when
+	is implicitly convertible to underlying type.
+
+2008-05-12  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #389272
+	* support.cs: Workaround System.InvalidOperationException for enums.
+
+2008-05-12  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #389073
+	* convert.cs: More undocumented explicit IntPtr/UIntPtr conversions.
+
+2008-05-10  Marek Safar  <marek.safar@gmail.com>
+
+	* driver.cs: Split Parse.
+	
+	* location.cs (LookupFile): Uses string.Empty.
+
+2008-05-07  Marek Safar  <marek.safar@gmail.com>
+
+	* expression.cs, parameter.cs: Small ParameterReference clean up.
+
+2008-05-07  Marek Safar  <marek.safar@gmail.com>
+
+	* anonymous.cs, codegen.cs, convert.cs, ecore.cs: Removed uber ugly TempEc
+	hack. Fixes #387502.
+
+2008-05-06  Martin Baulig  <martin@ximian.com>
+
+	* class.cs (Constructor.Emit): Fix the logic whether to emit
+	symbol information.
+
+2008-05-06  Raja R Harinath  <harinath@hurrynot.org>
+
+	Fix #385503
+	* iterators.cs (Iterator.CurrentBlock.DoEmit): Don't emit
+	InvalidOperationException when the iterator is before the start or
+	after the end.
+
+2008-05-06  Marek Safar  <marek.safar@gmail.com>
+
+	* nullable.cs (NullCoalescingOperator): Result is underlying type of left,
+	when left is nullable type.
+
+2008-05-06  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #386628
+	* expression.cs (LocalVariableReference): Continue in resolving when
+	variable is not assigned.
+
+2008-05-05  Marek Safar  <marek.safar@gmail.com>
+
+	* nullable.cs, statement.cs (Unwrap): Store non-variable expression in all
+	nullable operations.
+
+2008-05-04  Marek Safar  <marek.safar@gmail.com>
+
+	* nullable.cs, statement.cs (Unwrap): Don't duplicate variable expressions,
+	it saves many redundant temporary variables for nullable operations.
+
+2008-05-03  Marek Safar  <marek.safar@gmail.com>
+
+	* assign.cs: EventAddOrRemove is a statement and cannot have a type.
+	
+	* cfold.cs, constant.cs, expression.cs: Share Error_OperatorCannotBeApplied
+	method.
+	
+	* nullable.cs: Constant coalescing operator optimizations.
+
+2008-05-03  Marek Safar  <marek.safar@gmail.com>
+
+	* constant.cs: Use unsigned conversion for values which are unsigned only.
+
+2008-05-03  Marek Safar  <marek.safar@gmail.com>
+
+	* convert.cs, literal.cs, nullabel.cs, typemanager.cs: Implemeted null 
+	coalescing operator as it should be.
+
+2008-05-02  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #371016
+	* expression.cs: All predefined delegate operators require implicit method
+	group conversion.
+	
+2008-05-02  Marek Safar  <marek.safar@gmail.com>
+
+	* constant.cs: Emit long constant as uint when fits the range.
+	
+	* convert.cs, expression.cs: Fixed few unsafe conversions.
+
+2008-05-02  Marek Safar  <marek.safar@gmail.com>
+
+	* convert.cs, literal.cs: Don't wrap implicit reference conversion to object
+
+2008-05-02  Raja R Harinath  <harinath@hurrynot.org>
+
+	Fix #385758
+	* convert.cs (ImplicitNumericConversion): Don't modify the type of
+	'expr'.
+	* ecore.cs (EmptyCast.Create): Flatten nested EmptyCasts.
+
+2008-05-01  Marek Safar  <marek.safar@gmail.com>
+
+	* constant.cs, literal.cs: IsLiteral property for error reporting.
+	
+	* ecore.cs, expression.cs: Implemented Property expression.
+
+2008-05-01  Marek Safar  <marek.safar@gmail.com>
+
+	* class.cs, modifiers.cs, flowanalysis.cs: New BACKING_FIELD flag.
+	
+	* nullable.cs: Implemented nullable coalescing null operator.
+
+	* ecore.cs, expression.cs: Expression trees work.
+
+2008-05-01  Marek Safar  <marek.safar@gmail.com>
+
+	* ecore.cs: CreateExpressionTree is finally abstract.
+
+	* expression.cs, linq.cs: Updated.
+
+2008-05-01  Marek Safar  <marek.safar@gmail.com>
+
+	* expression.cs, ecore.cs: Block base access expression inside expression
+	tree.
+
+2008-05-01  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #385058
+	* expression.cs: User-defined operator implementations always take
+	precedence over predefined operator implementations.
+
+2008-04-30  Marek Safar  <marek.safar@gmail.com>
+
+	* assign.cs, anonymous.cs, lambda.cs, nullable.cs, ecore.cs, linq.cs,
+	class.cs, iterators.cs, expression.cs, attribute.cs: Filled a few more
+	expression tree conversions.
+	
+2008-04-30  Marek Safar  <marek.safar@gmail.com>
+
+	* typemanager.cs, ecore.cs, class.cs, expression.cs, doc.cs: Merged all
+	operators method details to Operator class.
+
+2008-04-30  Marek Safar  <marek.safar@gmail.com>
+
+	* anonymous.cs: Pass unsafe flags to anonymous container.
+	
+	* ecore.cs, expression.cs, statement.cs: Block unsafe pointer operations
+	inside expression tree.
+
+2008-04-29  Martin Baulig  <martin@ximian.com>
+
+	* cs-tokenizer.cs (Tokenizer.Position): Added `line'.
+	(Tokenizer.PopPosition): Also restore the `line'.
+
+2008-04-29  Marek Safar  <marek.safar@gmail.com>
+
+	* delegate.cs: Implemented Invoke expression.
+
 2008-04-29  Marek Safar  <marek.safar@gmail.com>
 
 	* expression.cs: Fixed equality reference comparison regression.
