--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-07  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Require the new symbol writer.
+
 2008-06-05  Lluis Sanchez  <lluis@novell.com>
 
 	* mono-debugger.pc.in: Add Mono.Debugger.Backend.dll to Libs
